# Copyright (C) 2017-2020 Veronique Geoffroy (veronique.geoffroy@inserm.fr)                                #
#                                                                                                          #
############################################################################################################


For more details, please see the README file.


	- Add bugfix for gnomAD annotations
	- Add the in-frame / out-of-frame information from overlapping genes (frameshift column)

July 30, 2020: AnnotSV version 2.4
	- Update of the annotations sources (see the corresponding README section)
	- Add of the COSMIC SV dataset (Cancer)
	- AnnotSV now reports either RefSeq or Ensembl gene transcripts. Use the new "-tx" option to report either NM or ENST transcripts
	  => The « NM » column has been renamed « tx »
	  => The “RefGene” directory has been renamed "Genes"
	- Add of the "Samples_ID" feature (report of the sample names for which the SV was called)
	  => Can be disabled in the AnnotSV configfile
	- Include the new "-externalGeneFiles" option to pass external gene file(s) path in the command line
	- Integration of 4 Tcl packages (http/tar/csv/json) in the AnnotSV distribution
	- Use of the “bcftools” toolset (Li, 2011) to fix a bug with multiallelic sites from VCF input file(s)
	  => bcftools is now required if using VCF input file(s)
	- Fix the output columns order not being the same depending on the system environment
	- "1000g_AF" and "1000g_max_AF" features are not reported anymore
	- Add bugfix concerning the CDS length and tx length calculation
	- Add bugfix concerning annotation of 2 SV with the same coordinates but from different types (DEL, DUP...)
	- Add bugfix with gzipped VCF files as input
	- Add bugfix concerning the running of bash scripts (illegal use of | or |& in command)
	- Add bugfix concerning the use of the "-snvIndelFiles" and "-candidateSnvIndelSamples" options
	- Add bugfix to the Exomiser module